--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,13 @@
             "email": "jeroen@webtastic.nl"
         }
     ],
-    "require": {}
+    "require": {},
+    "require-dev": {
+        "phpunit/phpunit": "4.0.*"
+    },
+    "autoload": {
+        "psr-4": {
+            "Boschman\\Test\\": "src"
+        }
+    }
 }
