--- a/.github/workflows/git-naming-conventions.yml
+++ b/.github/workflows/git-naming-conventions.yml
@@ -19,3 +19,10 @@ jobs:
               with:
                   pattern: '^(Merge branch|\[[a-z]+\/[[a-z]+-[0-9]+\]) .+' # Regex: allow e.g. "[feature/site-111] description"
                   error: 'Commit message needs this structure: "[feature/site-111] description"'
+            - name: Slack integration
+              uses: 8398a7/action-slack@v2
+              with:
+                  status: ${{ job.status }}
+              env:
+                  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+              if: always()
