[feature/site-111 test

--- a/.github/workflows/git-naming-conventions.yml
+++ b/.github/workflows/git-naming-conventions.yml
@@ -25,4 +25,4 @@ jobs:
                   status: ${{ job.status }}
               env:
                   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-              if: always()
+              if: failure()
