--- a/.github/workflows/pull-request-naming-conventions.yml
+++ b/.github/workflows/pull-request-naming-conventions.yml
@@ -15,3 +15,10 @@ jobs:
               uses: deepakputhraya/action-pr-title@master
               with:
                   regex: '^\[[A-Z]+-[0-9]+\] .+' # Regex: allow e.g. "[SITE-111] description"
+            - name: Slack integration
+              if: failure()
+              uses: 8398a7/action-slack@v2
+              with:
+                  status: ${{ job.status }}
+              env:
+                  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
