--- a/.github/workflows/git-naming-conventions.yml
+++ b/.github/workflows/git-naming-conventions.yml
@@ -1,9 +1,6 @@
-name: 'Test git naming conventions'
+name: 'Check git naming conventions'
 on:
-    push:
-        branches-ignore:
-            - master
-            - develop
+    push
 
 jobs:
     git-naming-conventions:
@@ -14,15 +11,17 @@ jobs:
               with:
                   regex: '^([a-z])+\/[[a-z]+-[0-9]+' # Regex: allow e.g. "feature/site-111"
                   allowed_prefixes: 'feature,hotfix' # All branches should start with the given prefix
+                  ignore: master,develop # Ignore exactly matching branch names from convention
             - name: Commit message
               uses: gsactions/commit-message-checker@v1
               with:
-                  pattern: '^(Merge branch|\[[a-z]+\/[[a-z]+-[0-9]+\]) .+' # Regex: allow e.g. "[feature/site-111] description"
+                  pattern: '^(Merge|\[[a-z]+\/[[a-z]+-[0-9]+\]) .+' # Regex: allow e.g. "[feature/site-111] description"
                   error: 'Commit message needs this structure: "[feature/site-111] description"'
             - name: Slack integration
               if: failure()
               uses: 8398a7/action-slack@v2
               with:
                   status: ${{ job.status }}
+                  fields: repo,message,action,author
               env:
                   SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
