--- a/.github/workflows/pull-request-naming-conventions.yml
+++ b/.github/workflows/pull-request-naming-conventions.yml
@@ -11,14 +11,15 @@ jobs:
     pull-request-naming-conventions:
         runs-on: ubuntu-latest
         steps:
-            - name: Pull request name
-              uses: deepakputhraya/action-pr-title@master
-              with:
-                  regex: '^\[[A-Z]+-[0-9]+\] .+' # Regex: allow e.g. "[SITE-111] description"
-            - name: Slack integration
-              if: failure()
-              uses: 8398a7/action-slack@v2
-              with:
-                  status: ${{ job.status }}
-              env:
-                  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+            -   name: Pull request name
+                uses: deepakputhraya/action-pr-title@master
+                with:
+                    regex: '^\[[A-Z]+-[0-9]+\] .+' # Regex: allow e.g. "[SITE-111] description"
+            -   name: Slack integration
+                if: failure()
+                uses: 8398a7/action-slack@v2
+                with:
+                    status: ${{ job.status }}
+                env:
+                    SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
