--- a/.github/workflows/pull-request-naming-conventions.yml
+++ b/.github/workflows/pull-request-naming-conventions.yml
@@ -22,4 +22,4 @@ jobs:
                     status: ${{ job.status }}
                 env:
                     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                    GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
