--- a/.github/workflows/git-naming-conventions.yml
+++ b/.github/workflows/git-naming-conventions.yml
@@ -22,7 +22,7 @@ jobs:
                 uses: 8398a7/action-slack@v2
                 with:
                     status: ${{ job.status }}
-                    fields: repo,message,action,author
+                    author_name: 'JB'
                 env:
                     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
                     GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
