--- a/.github/workflows/pull-request-naming-conventions.yml
+++ b/.github/workflows/pull-request-naming-conventions.yml
@@ -20,6 +20,7 @@ jobs:
                 uses: 8398a7/action-slack@v2
                 with:
                     status: ${{ job.status }}
+                    author_name: 'JB'
                 env:
                     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
                     GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
