--- a/.github/workflows/git-naming-conventions.yml
+++ b/.github/workflows/git-naming-conventions.yml
@@ -19,7 +19,7 @@ jobs:
                     error: 'Commit message needs this structure: "[feature/site-111] description"'
             -   name: Slack integration
                 if: failure()
-                uses: 8398a7/action-slack@v2
+                uses: webtastic/action-slack@master
                 with:
                     status: ${{ job.status }}
                     author_name: 'JB'
