--- a/.github/workflows/pull-request-naming-conventions.yml
+++ b/.github/workflows/pull-request-naming-conventions.yml
@@ -17,7 +17,7 @@ jobs:
                     regex: '^\[[A-Z]+-[0-9]+\] .+' # Regex: allow e.g. "[SITE-111] description"
             -   name: Slack integration
                 if: failure()
-                uses: 8398a7/action-slack@v2
+                uses: webtastic/action-slack@master
                 with:
                     status: ${{ job.status }}
                     author_name: 'JB'
