--- a/.github/workflows/pull-request-naming-conventions.yml
+++ b/.github/workflows/pull-request-naming-conventions.yml
@@ -20,7 +20,7 @@ jobs:
                 uses: webtastic/action-slack@master
                 with:
                     status: ${{ job.status }}
-                    author_name: 'JB'
+                    author_name: ''
                 env:
                     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-                    GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+                    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
